# temporal-fidelity

./: .gitignore  README.md  analyze.py  generate.py  layer_probe.py  probe.py  prompt_sensitivity.py  pyproject.toml  run.sh  run_all.py  run_shuffled_probe.sh  shuffled_probe.py
models/: __init__.py  base.py  internvl25.py  llava_next_video.py  molmo2.py  qwen25_vl.py  video_llama2.py  videochat_flash.py  videollama3.py
results/: internvl2.5_encoder_layers.csv  internvl2.5_interval.csv  internvl2.5_llm_layers.csv  internvl2.5_order.csv  internvl2.5_order_fps16.csv  internvl2.5_order_fps8.csv  internvl2.5_prompt_sensitivity.csv  internvl2.5_shuffled_probe_encoder.csv  internvl2.5_shuffled_probe_llm.csv  internvl2.5_simultaneity.csv  llava-next-video_encoder_layers.csv  llava-next-video_interval.csv  llava-next-video_order.csv  llava-next-video_order_fps16.csv  llava-next-video_order_fps8.csv  llava-next-video_shuffled_probe_encoder.csv  llava-next-video_shuffled_probe_llm.csv  llava-next-video_simultaneity.csv  molmo2_interval.csv  molmo2_llm_layers.csv  molmo2_order_fps16.csv  molmo2_order_fps30.csv  molmo2_order_fps8.csv  molmo2_prompt_sensitivity.csv  molmo2_shuffled_probe_encoder.csv  molmo2_shuffled_probe_llm.csv  molmo2_simultaneity.csv  qwen2.5-vl_encoder_layers.csv  qwen2.5-vl_interval.csv  qwen2.5-vl_llm_layers.csv  qwen2.5-vl_order.csv  qwen2.5-vl_order_fps16.csv  qwen2.5-vl_order_fps8.csv  qwen2.5-vl_prompt_sensitivity.csv  qwen2.5-vl_shuffled_probe_encoder.csv  qwen2.5-vl_shuffled_probe_llm.csv  qwen2.5-vl_simultaneity.csv  response_bias.csv  (+31 more)
